Completed Backed with Authentication and Remaining Controller Functions.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Dependency directories
 node_modules/
-node_modules
 
-# dotenv environment variable files
+# Environment variables
 .env
+.env.*
+*.env
